--- a/Administracion/templates/Administracion/Tercero/index.html
+++ b/Administracion/templates/Administracion/Tercero/index.html
@@ -58,8 +58,7 @@
                                                         {% else %}
                                                             <td>{{ tercero.nombre }}</td>
                                                         {% endif %}
-                                                        <td>{{ tercero.tipo_identificacion.sigla }} {{ tercero.identificacion }}{% if tercero.tipo_identificacion.sigla == 'NIT' and tercero.digito_verificacion %}-{{ tercero.digito_verificacion }}{% endif %}</td>
-
+                                                        <td>{{ tercero.tipo_identificacion.sigla }} {{ tercero.identificacion }}{% if tercero.tipo_identificacion.sigla == 'NIT' and tercero.digito_verificacion >= 0 %}-{{ tercero.digito_verificacion }}{% endif %}</td>
                                                         <td>{{ tercero.empresa }}</td>
                                                         <td>{{ tercero.fecha_creacion|date:'Y-m-d H:i' }}</td>
                                                         <td>{{ tercero.fecha_modificacion|date:'Y-m-d H:i' }}</td>
