EVA-170 Feat: Se realiza una modificación en el js de filtro por consecutivo Para poder reusarla en consecutivos de oficio y de reuniones.

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/index.html
@@ -35,6 +35,7 @@
                             <div class="col-md-2" style="float: right" >
                                 {% select_tag opciones_filtro 'filtro_consecutivos' '' value=id_filtro  %}
                             </div>
+                            <input id="ruta_filtro_consecutivos" hidden value="/gestion-documental/consecutivo-oficios/">
                         </div>
                         <div class="panel-container show">
                             <div class="panel-content">
