EVA-170 Feat: Se realizan modificaciones en los templates de consecutivos de reuniones

--- a/GestionDocumental/templates/GestionDocumental/ConsecutivosReuniones/index.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivosReuniones/index.html
@@ -46,29 +46,25 @@
                                             <table class="table table-bordered w-100" id="dataTableConsecutivos">
                                                 <thead class="bg-primary-600">
                                                     <tr>
-                                                        <th class="min-w-200">Código</th>
-                                                        <th class="min-w-200">Fecha</th>
-                                                        <th>Tema de la Reunión</th>
-                                                        <th>Fecha de la Reunión</th>
+                                                        <th class="min-w-50">Código</th>
+                                                        <th class="min-w-50">Fecha de la Reunión</th>
+                                                        <th class="min-w-200">Tema de la Reunión</th>
                                                         <th>Descripción</th>
                                                         <th>Usuario</th>
+                                                        <th>Fecha</th>
                                                         <th>Estado</th>
                                                         <th>Acción</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
                                                     {% for consecutivo in consecutivos %}
-                                                        {% if consecutivo == consecutivos.last and id_filtro == 1 %}
-                                                            Asereje
-                                                        {% endif %}
-                                                        <tr {% if consecutivo == consecutivos.last and id_filtro == 1 and consecutivo.usuario == request.user %}style="background: #fffaee;"{% endif %}>
+                                                        <tr>
                                                             <td>{{ consecutivo.codigo }}</td>
-                                                            <td>{{ consecutivo.fecha_crea | date:'Y-m-d' }}</td>
-
-                                                            <td>{{ consecutivo.tema }}</td>
                                                             <td>{{ consecutivo.fecha | date:'Y-m-d' }}</td>
+                                                            <td>{{ consecutivo.tema }}</td>
                                                             <td>{{ consecutivo.descripcion }}</td>
                                                             <td>{{ consecutivo.usuario.get_full_name }}</td>
+                                                            <td>{{ consecutivo.fecha_crea | date:'Y-m-d' }}</td>
                                                             <td>
                                                                 {% if consecutivo.estado %}
                                                                     <span class="badge badge-primary">Vigente</span>
@@ -77,7 +73,7 @@
                                                                 {% endif %}
                                                             </td>
                                                             <td>
-                                                                {% if perms.GestionDocumental.delete_consecutivooficio and consecutivo.estado %}
+                                                                {% if perms.GestionDocumental.delete_consecutivoreunion and consecutivo.estado %}
                                                                   <a class="far fa-2x fa-trash-alt color-danger-900" id="eliminar_{{ consecutivo.id }}" href="javascript:void(0);"  onclick="fConfirmarEliminar({{ consecutivo.id }}, true)" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Eliminar"></a>
                                                                 {% endif %}
                                                             </td>
@@ -96,7 +92,7 @@
                 </div>
             </div>
     </div>
-    {% include 'Administracion/_elements/_modal_confirmar_eliminar.html' with objeto='gestion-documental/consecutivo-oficios' %}
+    {% include 'Administracion/_elements/_modal_confirmar_eliminar.html' with objeto='gestion-documental/consecutivo-reuniones' %}
 
 {% endblock %}
 {% block scripts %}
