--- a/GestionDocumental/templates/GestionDocumental/ConsecutivosReuniones/crear.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivosReuniones/crear.html
@@ -40,7 +40,7 @@
                                         <div class="form-group">
                                             <div class="form-row">
                                                 <div class="col-md-12">
-                                                    {% input_textarea_tag 'detalle' 'Detalle de la Reunión (Opcional)' placeholder="Ingrese una descripción" maxlength="100" value=consecutivo.detalle mensaje_validacion='Por favor digite una descripción.' invalido=errores.descripcion %}
+                                                    {% input_textarea_tag 'descripcion' 'Descripción de la Reunión (Opcional)' placeholder="Ingrese una descripción" maxlength="100" value=consecutivo.descripcion mensaje_validacion='Por favor digite una descripción.' invalido=errores.descripcion %}
                                                 </div>
                                             </div>
                                         </div>
