--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaConsolidado/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaConsolidado/index.html
@@ -57,6 +57,20 @@
                         </div>
                         <div class="form-group">
                             <div class="form-row">
+                                <input id="valores_empresas" hidden value="{{ valor.lista_empresas }}">
+                                <div class="col-md-10">
+                                    {% select_multiple_tag empresas 'empresa[]' 'empresa_id' 'Seleccion una opción' texto_label="Empresas" multiple='multiple' %}
+                                </div>
+                                <div class="col-md-2 p-t-25">
+                                    <a href="javascript:seleccionarTodos('empresa');" id="btn_all_empresa" class="btn btn-default btn-icon waves-effect waves-themed" title="{{ textos_empresas.texto }}">
+                                        <i id="ic_all_empresa" class="fal {{ textos_empresas.icono }}"></i>
+                                    </a>
+                                    &nbsp;&nbsp;<b id="txt_all_empresa">{{ textos_empresas.texto }}</b>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="form-row">
                                 <input id="valores_procesos" hidden value="{{ valor.lista_procesos }}">
                                 <div class="col-md-10">
                                     {% select_multiple_tag procesos 'proceso[]' 'proceso_id' 'Seleccion una opción' texto_label="Procesos" multiple='multiple' %}
